[gd_scene load_steps=23 format=3 uid="uid://cxkjws8l3kjck"]

[ext_resource type="Script" path="res://scripts/battle.gd" id="1_a772h"]
[ext_resource type="Texture2D" uid="uid://bpxbdmquig5mi" path="res://assets/background/battleback2.png" id="1_u2mgu"]
[ext_resource type="Texture2D" uid="uid://cib03txa5p3va" path="res://assets/enemy/pepw.png" id="2_jvtq8"]
[ext_resource type="FontVariation" uid="uid://d10lmr7c5x242" path="res://assets/font/NES.tres" id="2_rekvu"]
[ext_resource type="Resource" uid="uid://dyni6xglb4f5h" path="res://resources/Dragon.tres" id="2_vsslh"]
[ext_resource type="FontFile" uid="uid://sexn7x78re4x" path="res://assets/font/Adventurer.ttf" id="4_behbv"]
[ext_resource type="AudioStream" uid="uid://dlce3v2tjwcww" path="res://assets/audio/ogg/Action 1 (Loop).ogg" id="7_8lytv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxss2"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pr7t0"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7kg7h"]
bg_color = Color(0, 0, 0, 0.509804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r47ga"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3f4p"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rwhpf"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cf12p"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[sub_resource type="FontVariation" id="FontVariation_55wcx"]
base_font = ExtResource("2_rekvu")

[sub_resource type="FontVariation" id="FontVariation_vfe7i"]
base_font = ExtResource("4_behbv")

[sub_resource type="Animation" id="Animation_n4c8l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EndScreen:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EndScreen:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ijyp2"]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rrhpy"]
resource_name = "enemy_died"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_yjuyb"]
resource_name = "game_quit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EndScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EndScreen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_pmb7p"]
resource_name = "player_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.196078), Color(1, 1, 1, 0), Color(1, 1, 1, 0.196078), Color(1, 1, 1, 0), Color(1, 1, 1, 0.196078), Color(1, 1, 1, 0), Color(1, 1, 1, 0.196078)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g0rix"]
_data = {
"RESET": SubResource("Animation_n4c8l"),
"enemy_damaged": SubResource("Animation_ijyp2"),
"enemy_died": SubResource("Animation_rrhpy"),
"game_quit": SubResource("Animation_yjuyb"),
"player_damaged": SubResource("Animation_pmb7p")
}

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a772h")
enemy = ExtResource("2_vsslh")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_u2mgu")

[node name="EnemyContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -143.5
offset_right = 128.0
offset_bottom = 143.5
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_vxss2")
theme_override_styles/fill = SubResource("StyleBoxFlat_pr7t0")
step = 1.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rekvu")
theme_override_font_sizes/font_size = 24
text = "HP: 25/50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
layout_mode = 2
texture = ExtResource("2_jvtq8")

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.862
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.359985
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_7kg7h")

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 1272.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_rekvu")
theme_override_font_sizes/font_size = 96
text = "moonmoon"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerPanel/PlayerData"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_vxss2")
theme_override_styles/fill = SubResource("StyleBoxFlat_pr7t0")
step = 1.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/VBoxContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rekvu")
theme_override_font_sizes/font_size = 42
text = "HP: 25/50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rage" type="ProgressBar" parent="PlayerPanel/PlayerData/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_vxss2")
theme_override_styles/fill = SubResource("StyleBoxFlat_pr7t0")
step = 1.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/VBoxContainer/Rage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rekvu")
theme_override_font_sizes/font_size = 42
text = "RP: 0/10
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7kg7h")

[node name="MarginContainer" type="MarginContainer" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Actions" type="HBoxContainer" parent="ActionsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Attack" type="Button" parent="ActionsPanel/MarginContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rekvu")
theme_override_font_sizes/font_size = 84
theme_override_styles/normal = SubResource("StyleBoxFlat_r47ga")
theme_override_styles/hover = SubResource("StyleBoxFlat_w3f4p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rwhpf")
text = "ATTACK"

[node name="Special" type="Button" parent="ActionsPanel/MarginContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rekvu")
theme_override_font_sizes/font_size = 84
theme_override_styles/normal = SubResource("StyleBoxFlat_r47ga")
theme_override_styles/hover = SubResource("StyleBoxFlat_w3f4p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rwhpf")
text = "SPECIAL"

[node name="Run" type="Button" parent="ActionsPanel/MarginContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rekvu")
theme_override_font_sizes/font_size = 84
theme_override_styles/normal = SubResource("StyleBoxFlat_r47ga")
theme_override_styles/hover = SubResource("StyleBoxFlat_w3f4p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rwhpf")
text = "RUN"

[node name="TextBox" type="Panel" parent="."]
visible = false
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 665.0
offset_bottom = 164.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cf12p")

[node name="Label" type="Label" parent="TextBox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_fonts/font = SubResource("FontVariation_55wcx")
theme_override_font_sizes/font_size = 64
text = "A TAUNTER appears!"
autowrap_mode = 2

[node name="Ticker" type="Label" parent="TextBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -67.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = SubResource("FontVariation_vfe7i")
theme_override_font_sizes/font_size = 64
text = ">"
vertical_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g0rix")
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
ignore_rotation = false

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="SpecialCD" type="Timer" parent="."]
process_callback = 0

[node name="EndScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="EndScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_rekvu")
theme_override_font_sizes/font_size = 128
text = "GAME
OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_8lytv")
volume_db = -10.0
autoplay = true
mix_target = 2

[connection signal="pressed" from="ActionsPanel/MarginContainer/Actions/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="ActionsPanel/MarginContainer/Actions/Special" to="." method="_on_special_pressed"]
[connection signal="pressed" from="ActionsPanel/MarginContainer/Actions/Run" to="." method="_on_run_pressed"]
